text align fix

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -52,7 +52,7 @@
         margin-left:2% ;
 		text-align: center;
     }
-	h4,h3{
+	h4,.box h3{
 		text-align: center;
     }
 }
